--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title> </title><style>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+	<title>Rusiru Fernando - Social</title>
+	<link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+	<style>
 /* cspell:disable-file */
 /* webkit printing magic: print all background colors */
 html {
