added steam link

--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
 				</div>
 				<div id="f448e2ae-b0d1-470f-bb2a-1f354ebab96c" style="width:79.16666666666667%" class="column">
 					<h1 id="8bbbe7e8-11fe-4f80-95f9-1ff6abe8269a" class=""><strong>Hi, my name is </strong><mark
-							class="highlight-pink"><strong>Rusiru.</strong></mark><strong> </strong></h1>
+							class="highlight-pink"><strong>Rusiru, </strong></mark><strong>a.k.a RuFerdZ</strong></h1>
 					<p id="670d4531-06da-467e-abf5-fd86b29c7241" class="">I’m a <mark
 							class="highlight-purple">developer</mark>, <mark class="highlight-teal">gamer </mark>&amp;
 						<mark class="highlight-yellow">foodie </mark>from Sri Lanka. </p>
@@ -890,8 +890,8 @@
 					</figure>
 					<figure class="block-color-default callout" style="white-space:pre-wrap;display:flex"
 					id="fd3a50cb-66c6-4221-8111-deb016f10a89">
-					<div style="font-size:1.5em"><img class="icon" src="assets/icons8-youtube-250.png" /></div>
-					<div style="width:100%"><a href="https://www.youtube.com/@ruferdz494"
+					<div style="font-size:1.5em"><img class="icon" src="assets/icons8-resume-50.png" /></div>
+					<div style="width:100%"><a href="assets/Rusiru Fernando.pdf"
 							target="_blank">Resume</a></div>
 				</figure>
 					<figure class="block-color-default callout" style="white-space:pre-wrap;display:flex"
@@ -924,14 +924,14 @@
 					</figure>
 					<figure class="block-color-default callout" style="white-space:pre-wrap;display:flex"
 						id="fd3a50cb-66c6-4221-8111-deb016f10a89">
-						<div style="font-size:1.5em"><img class="icon" src="assets/icons8-youtube-250.png" /></div>
-						<div style="width:100%"><a href="https://www.youtube.com/@ruferdz494"
-								target="_blank">Steam</a></div>
+						<div style="font-size:1.5em"><img class="icon" src="assets/icons8-steam-50.png" /></div>
+						<div style="width:100%"><a href="https://steamcommunity.com/id/RuFerdZ/"
+								target="_blank">Steam ID</a></div>
 					</figure>
 					<figure class="block-color-default callout" style="white-space:pre-wrap;display:flex"
 						id="96154e3b-d1ce-486b-9272-6cdc3898b82f">
 						<div style="font-size:1.5em"><img class="icon" src="assets/icons8-error-64.png" /></div>
-						<div style="width:100%"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">How to hack
+						<div style="width:100%"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">How to hack
 								NASA</a></div>
 					</figure>
 					<p id="64cc77b7-c274-43c4-975d-84695ac683b8" class="">
